# notifications_sprint_1

./: .gitignore  README.md
.github/workflows/: main.yml
airflow/dags/: .env.example  send_news.py
architecture/: README.md  diagram.puml
generator_events/: events.py
mock_api/: Dockerfile  pyproject.toml
mock_api/src/: main.py
mock_api/src/api/v1/: mock.py
mock_api/src/core/: config.py  logger.py
notification_service/: .env.example  Dockerfile  Dockerfile.event_worker  README.md  pyproject.toml
notification_service/src/: main.py
notification_service/src/api/v1/: healthcheck.py  notification.py
notification_service/src/core/: config.py  logger.py
notification_service/src/db/: rabbitmq.py
notification_service/src/event_worker/: main.py  rabbitmq.py
notification_service/src/models/: event.py  notification.py
notification_service/src/services/: event.py  notification.py
notification_service/src/utils/: jwt_and_services.py  services_constant.py
scheduler_worker/: .env.example  Dockerfile.scheduler_worker  main.py  pyproject.toml  settings.py
scheduler_worker/src/services/: check_notification.py  send_notification_to_queue.py
sender_worker/: .env.example
sender_worker/src/: config.py  main.py
