[tool.poetry]
name = "Mock API"
version = "1.0.0"
description = "Mock API"
authors = ["Awesome team"]
package-mode = false

[tool.poetry.dependencies]
fastapi = { extras = ["standard"], version = "^0.112.0" }
orjson = "^3.10.6"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python = "^3.10"
uvicorn = "^0.30.5"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src", "mock_api"]

[tool.ruff.lint]
select = ["E", "F", "I"]
