[tool.poetry]
name = "Scheduler worker"
version = "1.0.0"
description = ""
authors = ["Awesome team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
aio-pika = "^9.4.3"
backoff = "^2.2.1"
motor = "^3.5.1"
pydantic-settings = "^2.4.0"
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
